--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/lineas/detalleLinea.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/lineas/detalleLinea.zul
@@ -11,7 +11,7 @@
             use="sv.com.diserv.web.ui.lineas.DetalleLineaCtrl"
             closable="true"
             width="650px" 
-            height="420px"
+            height="220px"
             sizable="true" 
             sclass="pageWindowTitle"
             mode="modal">
@@ -34,8 +34,8 @@
                         tooltiptext="Guardar registro"/>
                 <button id="btnActualizar"
                         sclass="oT_ButtonWithIcon"
-                        image="/images/btnrefresh.gif"
-                        tooltiptext="Refrescar registros"/>
+                        image="/images/btnsave.gif"
+                        tooltiptext="Actualizar registros"/>
                 <button id="btnCerrar"
                         sclass="oT_ButtonWithIcon"
                         image="/images/close.jpg"
@@ -76,6 +76,14 @@
                                                     <rows>
                                                         <row>
                                                             <hbox>
+                                                                <label value="Activa:" />
+                                                                <label value="*" style="color:red;font-size:10px" />
+                                                            </hbox>
+   
+                                                            <checkbox id="checkEstadoLineas" onCheck=""  hflex="1" />
+                                                        </row>
+                                                        <row>
+                                                            <hbox>
                                                                 <label value="Id Linea" />
                                                                 <label value="*" style="color:red;font-size:10px" />
                                                             </hbox>
@@ -87,14 +95,7 @@
                                                                 readonly="true" />
                                                         </row>
                                                         
-                                                         <row>
-                                                            <hbox>
-                                                                <label value="Activa:" />
-                                                                <label value="*" style="color:red;font-size:10px" />
-                                                            </hbox>
-   
-                                                            <checkbox id="checkEstadoLineas" onCheck=""  hflex="1" />
-                                                        </row>
+                                                         
                                                                                                                                       
                                                         <row>
                                                             <hbox>
