--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/detalleCliente.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/detalleCliente.zul
@@ -99,7 +99,7 @@
                                                                     value="Nombre Cliente : " />
                                                                 <label value="*" style="color:red; font-size:10px" />
                                                             </hbox>
-                                                            <textbox   id="txtNombreClientes"   hflex="1" constraint="/[a-zA-Z\d]{3}/" />
+                                                            <textbox   id="txtNombreClientes"   hflex="1" />
                                                         </row>
                                                                     
                                                         <row>
