--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/detalleVendedor.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/detalleVendedor.zul
@@ -145,7 +145,7 @@
                                                             <groupbox
                                                                        mold="3d" height="25px"
                                                                        closable="false" contentStyle="border:0" style="margin:0 0 0 0 ">    
-                                                            <textbox id="txtNIT"
+                                                           <textbox id="txtNIT" maxlength="14"
                                                                      />
                                                             </groupbox>
                                                         </row>
@@ -159,14 +159,14 @@
                                                                 <groupbox
                                                                        mold="3d" height="25px"
                                                                        closable="false" contentStyle="border:0" style="margin:0 0 0 0 ">    
-                                                                     <textbox id="txtTelefono1" style="margin-right: 30px;margin-left: 0px;"
+                                                                      <intbox id="txtTelefono1" maxlength="8" constraint="no negative,no zero" 
                                                                       />
                                                                      
                                                                 <label value="Extension:" />
                                                                 <label value="*" style="color:red;font-size:10px" />
                                                             
-                                                            <textbox  
-                                                                id="txtExt1" 
+                                                            <intbox  
+                                                                id="txtExt1" maxlength="8" constraint="no negative,no zero"
                                                                  />
                                                              </groupbox>
                                                             
@@ -182,9 +182,8 @@
                                                             </hbox>
                                                             <groupbox mold="3d" height="25px"
                                                                        closable="false" contentStyle="border:0" style="margin:0 0 0 0 ">    
-                                                            <textbox  
-                                                                id="txtCorreo" 
-                                                                hflex="1" />
+                                                            <textbox width="150px" id="txtCorreo" hflex="1"  constraint="/.+@.+\.[a-z]+/: Por favor ingrese un Email valido" 
+                                                                 />
                                                              </groupbox>
                                                         </row>
                                                         <row>
