--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/articulos/detalleArticulo.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/articulos/detalleArticulo.zul
@@ -74,6 +74,19 @@
                                                         <column width="100%" />
                                                     </columns>
                                                     <rows>
+                                                          <row>
+                                                            <hbox>
+                                                                <label value="Tipo Ariculo" />
+                                                                <label value="*" style="color:red;font-size:10px" />
+                                                            </hbox>
+                                                           <combobox id="cmbTipoArticulo" 
+                                                                     autodrop="true"
+                                                                          mold="rounded"
+                                                                          autocomplete="true"
+                                                                          hflex="1"/>
+                                                             
+                                                            
+                                                        </row>
                                                          <row>
                                                             <hbox>
                                                                 <label value="Activo:" />
